2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/34_mult_str_int.deca
// Description :
//      opération * entre  string et mult 
// Resultats :
//    Erreur Contexteulle : ligne 14 : l'opération * n'est pas possible entre 'string' et 'int'
//
// Historique :
// cree le 10/01/2024

{
    int x = 2 ;
    string str = "bonjour";

    // il n'ya pas de déplucation 
    str = str*2;
}